# tower-lsp-boilerplate

./: .gitignore  .vscodeignore  Cargo.toml  README.md  esbuild.js  justfile  oxlint.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  webpack.config.js
.github/workflows/: ci.yml  rust.yml
client/: README.md  nrs-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: extension.ts
examples/: basic.nrs  index.rs  test.nrs
l-lang/: Cargo.toml  basic.l  build.rs  test.l
l-lang/src/: generated.rs  l.llw  lib.rs  main.rs  parser.rs  syntax_tree.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: chumsky.rs  completion.rs  hir.rs  jump_definition.rs  lib.rs  main.rs  nrs_lang.rs  reference.rs  semantic_analyze.rs  semantic_token.rs  symbol_table.rs
